--- a/readme
+++ b/readme
@@ -12,7 +12,9 @@
 В общей сумме, если не считать перерывов на работу и быт, вечер понедельника (пять-шесть часов).
 При этом постоянно смотрел в документацию Vuetify, т.к. никогда раньше не пользовался этой
 либой, а также ближе к концу переделал рекурсирвный проход по дереву - и это вызвало
-наибольшую задержку
+наибольшую задержку. Также, хоть приложение и выдержано в стиле FSD-архитектуры,
+также не мешало бы выделить час-полтора на рефакторинг всего, что связано с рекурсией
+компонентов, и их взаимодействием между собой
 
 ### Как запустить?
 
